--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -134,7 +134,7 @@
   }
 
   .card.highlight-card {
-    background-color: #1976d2;
+    background-color: red;
     color: white;
     font-weight: 600;
     border: none;
